OO-3170: Search for licenses

--- a/src/main/java/org/olat/gui/demo/guidemo/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/gui/demo/guidemo/_i18n/LocalStrings_de.properties
@@ -42,6 +42,7 @@ GuiDemoCalloutWindowController.menu.title=Callout windows
 GuiDemoCalloutWindowController.menu.title.alt=Callout windows for a decluttered GUI
 PollDemoController.menu.title=Poll demo
 PollDemoController.menu.title.alt=shows how controllers can poll for new gui states
+advanced_form.cbdropdown=Checkboxes Auswahlliste
 advanced_form.cancel=Abbrechen
 advanced_form.checkboxes=Checkboxes
 advanced_form.description=Hier werden verschiedene FlexiForm-Elemente verwendet. Das Formular reagiert auf gewisse Ereignisse. Die Daten werden jedoch nicht ausgewertet.
@@ -62,6 +63,10 @@ button.dirty=Button (dirty)
 button.preferred=Button (preferred)
 choose=w\u00E4hlen
 close=schliessen
+guidemo.cbdropdown.book=Buch
+guidemo.cbdropdown.clock=Uhr
+guidemo.cbdropdown.letter=Brief
+guidemo.cbdropdown.phone=Telefon
 guidemo.dialog.customcss=Dialog mit eigener CSS Klasse
 guidemo.dialog.generic=Allgemeiner Dialog starten
 guidemo.dialog.noclose=Dialog ohne Abbrech Link
