--- a/src/main/java/org/olat/gui/demo/guidemo/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/gui/demo/guidemo/_i18n/LocalStrings_en.properties
@@ -41,6 +41,7 @@ GuiDemoWindowControlController.menu.title=WindowControl
 GuiDemoWindowControlController.menu.title.alt=Demonstrates WindowControl
 PollDemoController.menu.title=Poll demo
 PollDemoController.menu.title.alt=shows how controllers can poll for new gui states
+advanced_form.cbdropdown=Checkboxes dropdown
 advanced_form.cancel=Cancel
 advanced_form.checkboxes=Check boxes
 advanced_form.description=There are several FlexiForm elements used. This form reacts to some events. However, no form data is processed.
@@ -63,6 +64,10 @@ calloutTriggerLink=Add user
 calloutTriggerLink2=more...
 choose=Choose
 close=Close
+guidemo.cbdropdown.book=Book
+guidemo.cbdropdown.clock=Clock
+guidemo.cbdropdown.letter=Letter
+guidemo.cbdropdown.phone=Phone
 guidemo.dialog.customcss=Start dialog with custom CSS
 guidemo.dialog.generic=Start generic dialog
 guidemo.dialog.guimsg=Generate info page
