--- a/src/main/java/org/olat/search/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/search/ui/_i18n/LocalStrings_de.properties
@@ -22,6 +22,7 @@ form.search.label.created.date=Erstellungsdatum
 form.search.label.description=Beschreibung
 form.search.label.documenttype=Dokumententyp
 form.search.label.filetype=Dateityp
+form.search.label.license=Lizenz
 form.search.label.metadatatype=Metadaten
 form.search.label.modified.date=Letzte \u00C4nderung
 form.search.label.title=Titel
@@ -124,6 +125,7 @@ type.identity=Benutzer
 type.identity.publicfolder = \u00d6ffentlicher Ordner
 type.identity.AbstractArtefact = Meine Artefakte
 type.question.item= Frage
+type.repository.entry.BinderTemplate=Lernressourcen, Portfolio 2.0 Vorlage
 type.repository.entry.CourseModule=Lernressourcen, Kurs
 type.repository.entry.FileResource.DOC=Lernressourcen, Word-Datei
 type.repository.entry.FileResource.FILE=Lernressourcen, Datei
