--- a/src/main/java/org/olat/search/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/search/ui/_i18n/LocalStrings_en.properties
@@ -23,6 +23,7 @@ form.search.label.created.date=Creation date
 form.search.label.description=Description
 form.search.label.documenttype=Document type
 form.search.label.filetype=File type
+form.search.label.license=License
 form.search.label.metadatatype=Meta data
 form.search.label.modified.date=Last modification
 form.search.label.title=Title
@@ -124,6 +125,7 @@ type.identity=User
 type.identity.AbstractArtefact=My artefacts
 type.identity.publicfolder=Public folder
 type.question.item=Question
+type.repository.entry.BinderTemplate=Learning resources, portfolio 2.0 template
 type.repository.entry.CourseModule=Learning resources, course
 type.repository.entry.EPStructuredMapTemplate=Learning resource, portfolio
 type.repository.entry.FileResource.BLOG=Learning resources, blog
