--- a/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_en.properties
@@ -324,7 +324,7 @@ warning.group.submit=This is a group task\! The submitted document is valid for 
 warning.group.task=This is a group task\! The task assignment, submission of documents and grading are performed as a group. Contact your group peers on how to proceed on deciding for a task and to collaboratively solve the task.
 warning.no.task.choosed=It seems that due to a change in the course element configuration, you weren't able to choose a task for this task element.
 warning.no.task.choosed.coach=It seems that due to a change in the course element configuration, the assignee wasn't able to choose a task for this task element.
-warning.reopen=If you decide to extend the submission deadline. This will automatically reopen the task submission.
+warning.reopen=If you decide to extend the submission deadline, this will automatically reopen the task submission.
 warning.submit.documents.edited=You cannot submit the task. The document "{1}" is currently being edited by "{0}".
 warning.tasks.in.process.delete.text=Do you really wan to delete this task? There are already users who have started the task process. It could result in problems for these users.
 warning.tasks.in.process.delete.title=$\:warning.tasks.in.process.title
