OO-3377: implements attendance rate in the part of coaching tool devoted to lectures

--- a/src/main/java/org/olat/modules/lecture/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/lecture/ui/_i18n/LocalStrings_de.properties
@@ -221,6 +221,7 @@ sync.teachers.calendar.enabled=Dozentenkalender synchronisieren
 table.header.absence=Anwesenheit
 table.header.absent.lectures=Abwesend
 table.header.actions=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
+table.header.attended.current.rate=% Anwesend
 table.header.attended.lectures=Anwesend
 table.header.authorized.absence=Entschuldigt
 table.header.auto.close.date=Auto closed am
