--- a/src/main/java/org/olat/modules/lecture/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/lecture/ui/_i18n/LocalStrings_en.properties
@@ -221,6 +221,7 @@ sync.teachers.calendar.enabled=Synchronize teachers calendars
 table.header.absence=Absence
 table.header.absent.lectures=Absent
 table.header.actions=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
+table.header.attended.current.rate=% Attended
 table.header.attended.lectures=Attended
 table.header.authorized.absence=Excused
 table.header.unauthorized.absence=Not excused
