no-jira: wording

--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_de.properties
@@ -213,6 +213,7 @@ new.match=Matrix
 new.matchdraganddrop=Drag and Drop
 new.matchtruefalse=True/false
 new.mc=Multiple Choice
+new.numerical=$\:new.fib.numerical
 new.rectangle=Viereck
 new.sc=Single Choice
 new.section=Sektion
