--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_en.properties
@@ -213,6 +213,7 @@ new.match=Match
 new.matchdraganddrop=Drag and Drop
 new.matchtruefalse=True/false
 new.mc=Multiple choice
+new.numerical=$\:new.fib.numerical
 new.rectangle=Rectangle
 new.sc=Single choice
 new.section=Section
