--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_fr.properties
@@ -211,6 +211,7 @@ new.match=Match
 new.matchdraganddrop=Drag and Drop
 new.matchtruefalse=True/false
 new.mc=Choix multiples
+new.numerical=$\:new.fib.numerical
 new.rectangle=Rectangle
 new.sc=Choix simple
 new.section=Section
