--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_it.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_it.properties
@@ -135,6 +135,7 @@ new.hottext.text=testo
 new.kprim=KPrim
 new.match=Corrispondenza
 new.mc=Scelta multipla
+new.numerical=$\:new.fib.numerical
 new.rectangle=Rettangolo
 new.sc=Scelta singola
 new.section=Sezione
