--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_pt_BR.properties
@@ -209,6 +209,7 @@ new.kprim=Kprim
 new.match=Combine
 new.matchdraganddrop=Arraste e solte
 new.mc=Escolha M\u00FAltipla
+new.numerical=$\:new.fib.numerical
 new.rectangle=Ret\u00E2ngulo
 new.sc=Escolha \u00FAnica
 new.section=Se\u00E7\u00E3o
