--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_zh_CN.properties
@@ -131,6 +131,7 @@ new.hotspot=Hotspot
 new.kprim=Kprim
 new.match=\u914D\u5BF9
 new.mc=\u591A\u9009\u9898
+new.numerical=$\:new.fib.numerical
 new.rectangle=\u77E9\u5F62
 new.sc=\u5355\u9009\u9898
 new.section=\u8282
