--- a/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_en.properties
@@ -1,35 +1,48 @@
-#Tue Aug 23 10:23:23 CEST 2016
+#Tue Mar 13 18:56:55 CET 2018
 assessed.identity=assessed user
-number.assessed.identity={0}. user
 comment=Comment
 comment.help=Comments are visible to user as to other coaches.
 comment.test=Test comment
 confirm.save=Do you want to save the results as completed?
 correction=Correction
+correction.assessed.identities=Users
+correction.assessment.items=Questions
+correction.auto=Auto
 correction.min.max.score=Score need to be between {0} and {1}.
 correction.test.title=Grade
 error.in.form=The changes cannot be saved, as there are errors in one or more question items. The detailed error description can be found by the corresponding question item.
 grade.no.items=There is no results to correct for this question.
-override.score=Override score
 next.item=Next question
+next.user=Next user
 not.responded=The question was not responded
+number.assessed.identity={0}. user
+override.score=Override score
 overview.tests=Overview and closing
 previous.item=Previous question
+previous.user=Previous user
 save.next=Save and next question
 save.tests=Save results as completed
 score=Score
-table.header.action=<i class='o_icon o_icon_actions o_icon-lg'> </i>
+status=Status
+table.header.action=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
+table.header.answered=Answered
 table.header.autoCorrected=Auto
 table.header.corrected=Manual
-table.header.user=Participant
-table.header.score=Points
+table.header.item.title=Question
 table.header.item.type=Question type
+table.header.not.corrected=Not corrected
+table.header.notAnswered=Not anwsered
+table.header.score=Points
+table.header.section=Section
+table.header.to.review=To review
+table.header.user=Participant
 table.header.username=Username
 to.review=Review
 tool.review.all=Mark all
 tool.unreview.all=Remove marks
 view.solution=View solution
 waring.atleast.one=You need at least a question.
-warning.not.submitted=Answer was not submitted by the user
+warning.assessment.item.locked=The answer is currently locked by an other user\: {0}.
 warning.confirm.save=$\:confirm.save You have still uncorrected questions.
-
+warning.no.assessment.item=There is nothing to correct.
+warning.not.submitted=Answer was not submitted by the user
