--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -1,4 +1,4 @@
-#Tue Feb 06 08:32:16 CET 2018
+#Tue Mar 13 18:57:02 CET 2018
 add=+
 add.to.list=Add to list
 admin.menu.title=Question bank
@@ -134,6 +134,7 @@ item.type.hottext=Hottext
 item.type.kprim=KPrim
 item.type.match=Match
 item.type.matchdraganddrop=Drag and Drop
+item.type.matchtruefalse=True/false
 item.type.mc=Multiple-Choice
 item.type.numerical=Numerical input
 item.type.sc=Single-Choice
