OO-3385 multi type search in repository, re-arrangement of extended search input fields

--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_de.properties
@@ -147,10 +147,10 @@ cif.owners=Autoren
 cif.private.dates=Datum
 cif.public.dates=Semester
 cif.requirements=Voraussetzungen
-cif.resources.status=Kurse
+cif.resources.status=Lebenszyklus
 cif.resources.status.all=Alle
-cif.resources.status.active=Aktive
-cif.resources.status.closed=Beendete
+cif.resources.status.active=$\:status.opened
+cif.resources.status.closed=$\:status.closed
 cif.resourcename=Dateiname
 cif.softkey=OpenOLAT-Soft-ID
 cif.type=Typ
