--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_fr.properties
@@ -140,10 +140,10 @@ cif.private.dates=Date
 cif.public.dates=Semestre
 cif.requirements=Exigences
 cif.resourcename=Nom de fichier
-cif.resources.status=Cours
-cif.resources.status.active=Actif
+cif.resources.status=Cycle de vie
 cif.resources.status.all=Tous
-cif.resources.status.closed=Termin\u00E9
+cif.resources.status.active=$\:status.opened
+cif.resources.status.closed=$\:status.closed
 cif.softkey=OpenOLAT-Soft-ID
 cif.type=Type
 cif.type.na=pas d'indication
