--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_en.properties
@@ -143,10 +143,10 @@ cif.owners=Authoring rights
 cif.private.dates=Dates
 cif.public.dates=Semester
 cif.requirements=Requirements
-cif.resources.status=Courses
+cif.resources.status=Life cycle
 cif.resources.status.all=All
-cif.resources.status.active=Active
-cif.resources.status.closed=Closed
+cif.resources.status.active=$\:status.opened
+cif.resources.status.closed=$\:status.closed
 cif.resourcename=File name
 cif.softkey=OpenOLAT soft ID
 cif.type=Type
