OO-3170: Multiselection dropdown element with non selected text

--- a/src/main/java/org/olat/gui/demo/guidemo/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/gui/demo/guidemo/_i18n/LocalStrings_de.properties
@@ -66,6 +66,7 @@ close=schliessen
 guidemo.cbdropdown.book=Buch
 guidemo.cbdropdown.clock=Uhr
 guidemo.cbdropdown.letter=Brief
+guidemo.cbdropdown.non.selected=Bitte w\u00e4hlen
 guidemo.cbdropdown.phone=Telefon
 guidemo.dialog.customcss=Dialog mit eigener CSS Klasse
 guidemo.dialog.generic=Allgemeiner Dialog starten
