--- a/src/main/java/org/olat/gui/demo/guidemo/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/gui/demo/guidemo/_i18n/LocalStrings_en.properties
@@ -67,6 +67,7 @@ close=Close
 guidemo.cbdropdown.book=Book
 guidemo.cbdropdown.clock=Clock
 guidemo.cbdropdown.letter=Letter
+guidemo.cbdropdown.non.selected=Please select
 guidemo.cbdropdown.phone=Phone
 guidemo.dialog.customcss=Start dialog with custom CSS
 guidemo.dialog.generic=Start generic dialog
