OO-3339 beautify and i18n manual correction wf, fix broken element css for cancel button and callout window

--- a/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_en.properties
@@ -37,12 +37,12 @@ table.header.section=Section
 table.header.to.review=To review
 table.header.user=Participant
 table.header.username=Username
-to.review=Review
-tool.review.all=Mark all
+to.review=Mark for review
+tool.review.all=Mark all for review
 tool.unreview.all=Remove marks
 view.solution=View solution
 waring.atleast.one=You need at least a question.
 warning.assessment.item.locked=The answer is currently locked by an other user\: {0}.
 warning.confirm.save=$\:confirm.save You have still uncorrected questions.
 warning.no.assessment.item=There is nothing to correct.
-warning.not.submitted=Answer was not submitted by the user
+warning.not.submitted=This question has not been answered by the user
