--- a/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_de.properties
@@ -2,7 +2,7 @@
 assessed.identity=Benutzer
 number.assessed.identity={0}. Benutzer
 comment=Kommentar
-comment.help=Kommentar sind sichbar von Benutzer sowie andere Betreuer.
+comment.help=Dieser Kommentar ist sichbar f\u00FCr den Benutzer in der Testzusammenfassung sowie f\u00FCr andere Betreuer.
 comment.test=Test Kommentar
 confirm.save=Wollen Sie den Resultaten als endg\u00FCltig speichern?
 correction=Korrigieren
@@ -14,19 +14,19 @@ correction.auto=Auto
 error.in.form=Die \u00C4nderungen k\u00F6nnen nicht gespeichert werden, da bei einer oder mehreren Fragen Fehler auftreten. Die detaillierte Fehlerbeschreibung befindet sich bei der betroffenen Frage.
 grade.no.items=Es gibt kein Resultat f\u00FCr diese Frage zu korrigieren.
 override.score=Punkte \u00FCberschreiben
-next.item=Zur n\u00E4chsten Frage
-next.user=Zur n\u00E4chsten Benutzer
+next.item=N\u00E4chste Frage
+next.user=N\u00E4chster Benutzer
 not.responded=Die Frage wurde nicht beantwortet
 overview.tests=\u00DCbersicht und abschliessen
-previous.item=Zur\u00FCck zur letzte Frage
-previous.user=Zur\u00FCck zur letzten Benutzer
+previous.item=Vorherige Frage
+previous.user=Vorheriger Benutzer
 save.next=Speichern und n\u00E4chste Frage
 save.tests=Als endg\u00FCltiges Resultat speichern
 score=Punkte
 status=Status
 table.header.action=<i class='o_icon o_icon_actions o_icon-lg'> </i>
-table.header.answered=Antwortet
-table.header.notAnswered=Nicht geantwortet
+table.header.answered=Beantwortet
+table.header.notAnswered=Nicht beantwortet
 table.header.user=Teilnehmer
 table.header.username=Benutzername
 table.header.item.title=Frage
@@ -37,11 +37,11 @@ table.header.to.review=\u00DCberpr\u00FCfen
 table.header.score=Punkte
 table.header.section=Sektion
 table.header.not.corrected=Nicht korrigiert
-to.review=\u00DCberpr\u00FCfen
-tool.review.all=Alle markieren
+to.review=Zur \u00DCberpr\u00FCfung markieren
+tool.review.all=Alle f\u00FCr \u00DCberpr\u00FCfung markieren
 tool.unreview.all=Markierung aufheben
 view.solution=L\u00F6sung ansehen
-warning.not.submitted=Antwort wurde nicht von Benutzer abgegeben
+warning.not.submitted=Diese Frage wurde vom Benutzer nicht beantwortet
 warning.no.assessment.item=Es gibt nichts zu korrigieren
 waring.atleast.one=Sie m\u00FCssen mindestens eine Frage w\u00E4hlen.
 warning.assessment.item.locked=Antwort ist bereit von einem anderen Benutzer gesperrt: {0}
