OO-3173 static text in drop down multiselect when nothing is selected

--- a/src/main/java/org/olat/search/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/search/ui/_i18n/LocalStrings_de.properties
@@ -12,7 +12,7 @@ search.context.course=In Kurs
 search.context.course_node=Hier
 search.context.tooltip=Suchen Sie innerhalb: "{0}"
 disable.highlighting=Ohne Suchbegriffe
-drop.down.no.selection=keine
+drop.down.no.selection=alle
 enable.highlighting=Mit Suchbegriffen
 error.resource.could.not.found=Die ausgew\u00E4hlte Ressource kann nicht angezeigt werden, da sie entweder nicht mehr vorhanden ist oder die Zugriffsberechtigungen sich ver\u00E4ndert haben. 
 form.search.label.area=Bereich
