--- a/src/main/java/org/olat/search/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/search/ui/_i18n/LocalStrings_en.properties
@@ -13,7 +13,7 @@ area.users=User
 area.wikis=Wiki
 disable.highlighting=Without search keys
 DocumentPool=Document pool
-drop.down.no.selection=No selection
+drop.down.no.selection=all
 enable.highlighting=With search keys
 error.resource.could.not.found=Selected resource not found. It either does not exist anymore or its access rights have been modified in the meantime.
 form.search.label.area=Area
