--- a/src/main/java/org/olat/search/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/search/ui/_i18n/LocalStrings_fr.properties
@@ -16,7 +16,7 @@ area.portfolio=Portfolio
 area.users=Utilisateur
 area.wikis=Wiki
 disable.highlighting=Sans termes de recherche
-drop.down.no.selection=aucune
+drop.down.no.selection=tous
 enable.highlighting=Avec termes de recherche
 error.resource.could.not.found=La ressource s\u00E9lectionn\u00E9e ne peut \u00EAtre affich\u00E9e, car ou bien elle n'existe plus ou les conditions d'acc\u00E8s ont \u00E9t\u00E9 modifi\u00E9es. 
 form.search.label.area=Domaine
