OO-3283: consolidate packages of RSS feed util and servlet for notifications, add and fix some missing i18n keys for notifications

--- a/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_de.properties
@@ -143,6 +143,7 @@ notifications.correction.doc=Sie haben ein Feedback f\u00FCr die Aufgabe "{0}" i
 notifications.correction.duedate=$\:notifications.correction Die \u00DCberarbeitungsfrist wurde auf den {2} gesetzt.
 notifications.group.header=Gruppenaufgabe in Kurs "{0}"
 notifications.group.header.task=Gruppenaufgabe "{0}" in Kurs "{1}"
+notifications.header=Aufgabe in Kurs "{0}"
 notifications.individual.header=Aufgabe in Kurs "{0}"
 notifications.individual.header.task=Aufgabe "{0}" in Kurs "{1}"
 notifications.revision.group=F\u00FCr die Aufgabe "{0}" im Kurs "{1}" wurde eine neue \u00DCberarbeitungen f\u00FCr die Gruppe "{2}" abgegeben.
