--- a/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_en.properties
@@ -143,6 +143,7 @@ notifications.correction.doc=You have received feedback for the task "{0}" in th
 notifications.correction.duedate=$\:notifications.correction The deadline for the revision is set to the {2}.
 notifications.group.header=Group task in course "{0}"
 notifications.group.header.task=Group task "{0}" in course "{1}"
+notifications.header=Task in course "{0}"
 notifications.individual.header=Task in course "{0}"
 notifications.individual.header.task=Task "{0}" in course "{1}"
 notifications.revision.group=For the task "{0}" in course "{1}" was a new revision submitted for the group "{2}".
