--- a/src/main/java/org/olat/core/commons/services/license/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/core/commons/services/license/ui/_i18n/LocalStrings_de.properties
@@ -8,6 +8,7 @@ admin.licensor.creator=Inizialer Lizenzgeber
 admin.licensor.constant=Konstanter Lizenzgeber
 admin.licensor.constant.edit=Bearbeiten
 admin.licensor.constant.title=Lizenzgeber bearbeiten
+admin.start.indexer=Nach dem Ein- und Ausschalten der Lizenzen in einem Bereich sollten Sie den Indexer der Volltextsuche starten, damit die Lizenzen in den Resultaten der Suche korrekt angezeigt werden.
 admin.translate=\u00dcbersetzung der Lizenz
 admin.title=Lizenzen
 edit.license.type=Lizenz bearbeiten
@@ -23,8 +24,17 @@ license.type.inactive={0} (inaktiv)
 license.type.missing=Lizenz fehlt
 license.type.name=Name
 license.type.name.translation=\u00dcbersetzung
-license.type.trans.no.license=Keine Lizenz
+license.type.trans.all\ rights\ reserved=All rights reserved
+license.type.trans.cc\ by-nc-nd=CC BY-NC-ND
+license.type.trans.cc\ by-nc-sa=CC BY-NC-SA
+license.type.trans.cc\ by-nc=CC BY-NC
+license.type.trans.cc\ by-nd=CC BY-ND
+license.type.trans.cc\ by-sa=CC BY-SA
+license.type.trans.cc\ by=CC BY
+license.type.trans.cc0=CC0
 license.type.trans.freetext=Freitext
+license.type.trans.no.license=Keine Lizenz
+license.type.trans.public\ domain=Public domain
 license.type.up=Hoch
 licensor.creator.constant=Konstanter Lizenzgeber
 licensor.creator.none=Ohne Lizenzgeber
