--- a/src/main/java/org/olat/core/commons/services/license/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/core/commons/services/license/ui/_i18n/LocalStrings_en.properties
@@ -8,6 +8,7 @@ admin.licensor.creator=Initial licensor
 admin.licensor.constant=Constant licensor
 admin.licensor.constant.edit=Edit
 admin.licensor.constant.title=Edit licensor
+admin.start.indexer=After the activation or deactivation of licenses in a module you should start the full search indexer to show the right licenses in the search results.
 admin.translate=Translate license
 admin.title=Licenses
 edit.license.type=Edit license
@@ -23,8 +24,17 @@ license.type.inactive={0} (inactive)
 license.type.missing=Missing license
 license.type.name=Name
 license.type.name.translation=Translation
-license.type.trans.no.license=No license
+license.type.trans.all\ rights\ reserved=All rights reserved
+license.type.trans.cc\ by-nc-nd=CC BY-NC-ND
+license.type.trans.cc\ by-nc-sa=CC BY-NC-SA
+license.type.trans.cc\ by-nc=CC BY-NC
+license.type.trans.cc\ by-nd=CC BY-ND
+license.type.trans.cc\ by-sa=CC BY-SA
+license.type.trans.cc\ by=CC BY
+license.type.trans.cc0=CC0
 license.type.trans.freetext=Free text
+license.type.trans.no.license=No license
+license.type.trans.public\ domain=Public domain
 license.type.up=Up
 licensor.creator.constant=Constant licensor
 licensor.creator.none=No licensor
