--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
@@ -118,14 +118,14 @@ qti.form.menurender=Menu Darstellung
 qti.form.menurender.allquestions=Alle Fragen
 qti.form.menurender.sectionsonly=Nur Sektionstitel
 qti.form.questionnaire.title=Fragebogen
-qti.form.questionprogress=Anzahl Fragen im Test anzeigen
+qti.form.questionprogress=Anzahl Fragen und Fortschritt im Test anzeigen
 qti.form.questiontitle=Fragetitel anzeigen
 qti.form.result.title=Resultate
 qti.form.results.onfinish=Resultate nach Testabschluss anzeigen
 qti.form.results.onfinish.help=Wenn diese Checkbox nicht ausgew\u00E4hlt werden kann, muss im Tab Optionen "Konfiguration anpassen" aktiviert werden.
 qti.form.results.onhomepage=Resultate auf Test-Startseite anzeigen
 qti.form.scoreinfo=Punkte auf Test-Startseite anzeigen
-qti.form.scoreprogress=Anzahl Punkte im Test anzeigen
+qti.form.scoreprogress=Anzahl Punkte und Punktestand im Test anzeigen
 qti.form.selftest.title=Selbsttest
 qti.form.sequence=Gruppierung der Fragen
 qti.form.sequence.item=Eine Frage pro Seite
