--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
@@ -118,14 +118,14 @@ qti.form.menurender=Menu layout
 qti.form.menurender.allquestions=All questions
 qti.form.menurender.sectionsonly=Only section titles
 qti.form.questionnaire.title=Questionnaire
-qti.form.questionprogress=Show number of questions in test
+qti.form.questionprogress=Show number of questions and progress in test
 qti.form.questiontitle=Show question title
 qti.form.result.title=Results
 qti.form.results.onfinish=Show results after test has been submitted
 qti.form.results.onfinish.help=If this check-box cannot be selected, please choose "Adjust configuration" in the Options tab.
 qti.form.results.onhomepage=Show results on test homepage
 qti.form.scoreinfo=Show score on test homepage
-qti.form.scoreprogress=Show score in test
+qti.form.scoreprogress=Show points and score in test
 qti.form.selftest.title=Self-test
 qti.form.sequence=Clustering of questions
 qti.form.sequence.item=One question per page 
