OO-3170: Application of the license service in the question pool incl. the necessary migration of the existing licenses

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -21,11 +21,11 @@ confirm.copy.message=Wollen Sie diese Fragen wirklich kopieren?
 confirm.copy.questions=Fragen
 confirm.copy.title=Kopieren
 confirm.delete.button=L\u00F6schen
-confirm.delete.confirmation=Alle Fragen l\u00F6schen
+confirm.delete.confirmation=Alle ausgew\u00E4tlten Fragen l\u00F6schen
 confirm.delete.confirmation.error=Bitte best\u00E4tigen.
 confirm.delete.questions=Fragen
 confirm.delete.title=L\u00F6schen
-confirm.delete.message=Wollen Sie diese Fragen wirklich l\u00F6schen? Sie k\u00F6nnen nicht wiederhergestellt werden.
+confirm.delete.message=Wollen Sie die ausgew\u00E4tlten Fragen wirklich l\u00F6schen? Sie k\u00F6nnen nicht wiederhergestellt werden.
 confirm.delete.source=Wollen Sie wirklich diese Liste l\u00F6schen?
 confirm.unshare=Wollen Sie wirklich diese Frage von "{0}" entfernen?
 convert.editable=Andere Benutzer d\u00FCrfen die Frage bearbeiten
@@ -75,15 +75,15 @@ export.log=Log
 export.log.header.additional.informations=$\:general.additional.informations
 export.log.header.assessment.type=$\:question.assessmentType
 export.log.header.context=$\:educational.context
-export.log.header.copyright=$\:rights.copyright
 export.log.header.coverage=$\:general.coverage
-export.log.header.creator=$\:rights.creator
 export.log.header.differentiation=$\:question.differentiation
 export.log.header.difficulty=$\:question.difficulty
 export.log.header.item.type=$\:question.type
 export.log.header.keywords=$\:general.keywords
 export.log.header.language=$\:general.language
 export.log.header.learningTime=$\:educational.learningTime
+export.log.header.license=$\:rights.license
+export.log.header.licensor=$\:rights.licensor
 export.log.header.log.action=Aktion
 export.log.header.log.author=Ge\u00E4ndert durch
 export.log.header.log.date=Datum
@@ -240,9 +240,9 @@ rating.empty.table=Diese Frage wurde noch nicht beurteilt.
 remove=-
 rename.collection=Liste umbenennen
 rights=Rechte
-rights.copyright=Copyright
-rights.creator=Urheber
-rights.description=Lizenz
+rights.freetext=Lizenztext
+rights.license=Lizenz
+rights.licensor=Lizenzgeber
 rights.owners=Autoren
 root.taxonomyLevel=Fachbereiche
 select.group=Freigeben
