--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -21,9 +21,9 @@ confirm.copy.message=Do you really want to copy the questions?
 confirm.copy.questions=Questions
 confirm.copy.title=Copy
 confirm.delete.button=Delete
-confirm.delete.confirmation=Delete all questions
+confirm.delete.confirmation=Delete all selected questions
 confirm.delete.confirmation.error=Please confirm
-confirm.delete.message=Do you really want to permanently delete these questions? They can not be recovered.
+confirm.delete.message=Do you really want to permanently delete the selected questions? They can not be recovered.
 confirm.delete.questions=Questions
 confirm.delete.source=Do you really want to delete this list?
 confirm.delete.title=Delete
@@ -75,15 +75,15 @@ export.log=Log
 export.log.header.additional.informations=$\:general.additional.informations
 export.log.header.assessment.type=$\:question.assessmentType
 export.log.header.context=$\:educational.context
-export.log.header.copyright=$\:rights.copyright
 export.log.header.coverage=$\:general.coverage
-export.log.header.creator=$\:rights.creator
 export.log.header.differentiation=$\:question.differentiation
 export.log.header.difficulty=$\:question.difficulty
 export.log.header.item.type=$\:question.type
 export.log.header.keywords=$\:general.keywords
 export.log.header.language=$\:general.language
 export.log.header.learningTime=$\:educational.learningTime
+export.log.header.license=$\:rights.license
+export.log.header.licensor=$\:rights.licensor
 export.log.header.log.action=Action
 export.log.header.log.author=Changed by
 export.log.header.log.date=Date
@@ -243,9 +243,9 @@ rating.empty.table=This question was not rated yet.
 remove=-
 rename.collection=Rename list
 rights=Rights
-rights.copyright=Copyright
-rights.creator=Creator
-rights.description=License
+rights.freetext=License text
+rights.license=License
+rights.licensor=Licensor
 rights.owners=Authors
 root.taxonomyLevel=Subjects
 select.group=Share
