--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_fr.properties
@@ -75,15 +75,15 @@ export.log=Fichier log
 export.log.header.additional.informations=$\:general.additional.informations
 export.log.header.assessment.type=$\:question.assessmentType
 export.log.header.context=$\:educational.context
-export.log.header.copyright=$\:rights.copyright
 export.log.header.coverage=$\:general.coverage
-export.log.header.creator=$\:rights.creator
 export.log.header.differentiation=$\:question.differentiation
 export.log.header.difficulty=$\:question.difficulty
 export.log.header.item.type=$\:question.type
 export.log.header.keywords=$\:general.keywords
 export.log.header.language=$\:general.language
 export.log.header.learningTime=$\:educational.learningTime
+export.log.header.license=$\:rights.license
+export.log.header.licensor=$\:rights.licensor
 export.log.header.log.action=Action
 export.log.header.log.author=Chang\u00E9 par
 export.log.header.log.date=Date
@@ -240,9 +240,6 @@ rating.empty.table=Cette question n'a pas encore \u00E9t\u00E9 \u00E9valu\u00E9e
 remove=-
 rename.collection=Renommer la liste
 rights=Droits
-rights.copyright=Copyright
-rights.creator=Propri\u00E9taires
-rights.description=License
 rights.owners=Auteurs
 root.taxonomyLevel=Sujets
 select.group=Partag\u00E9
