--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_pt_BR.properties
@@ -76,15 +76,15 @@ export.log=Log
 export.log.header.additional.informations=$\:general.additional.informations
 export.log.header.assessment.type=$\:question.assessmentType
 export.log.header.context=$\:educational.context
-export.log.header.copyright=$\:rights.copyright
 export.log.header.coverage=$\:general.coverage
-export.log.header.creator=$\:rights.creator
 export.log.header.differentiation=$\:question.differentiation
 export.log.header.difficulty=$\:question.difficulty
 export.log.header.item.type=$\:question.type
 export.log.header.keywords=$\:general.keywords
 export.log.header.language=$\:general.language
 export.log.header.learningTime=$\:educational.learningTime
+export.log.header.license=$\:rights.license
+export.log.header.licensor=$\:rights.licensor
 export.log.header.log.action=A\u00E7\u00E3o
 export.log.header.log.author=Alterado por
 export.log.header.log.date=Data
@@ -242,9 +242,6 @@ rating.empty.table=A pergunta ainda n\u00E3o foi classificada
 remove=-
 rename.collection=Renomear lista
 rights=Direitos
-rights.copyright=Copyright
-rights.creator=Propriet\u00E1rios
-rights.description=Licen\u00E7a
 rights.owners=Autores
 root.taxonomyLevel=Assuntos
 select.group=Compartilhar
