--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
@@ -12,12 +12,9 @@ average.rating.for.final=Average rating for status "final"
 collections.enabled=Lists
 create.infos.page=Create infos page
 create.level=Create level
-create.license=Create license
 create.type=Create type
 delete.level=Delete
 delete.level.confirm=Do you really want to delete this level?
-delete.license=Delete
-delete.license.confirm=Do you really want to delete this license?
 delete.qustions.without.author=Delete questions when author deleted
 delete.qustions.without.author.info=When a user is deleted, he is removed as author from his question items. If this option is enabled and the user is the only author of the question item, the question item is deleted as well.
 delete.taxonomyLevel=Delete
@@ -34,15 +31,12 @@ final.visibility=Visibility of final questions
 final.visibility.manager=Manager
 final.visibility.manager.teacher=Manager, Teacher
 import.create.subject=Create subject when importing
-item.license.deleted=License has been successfully deleted.
-item.license.notdeleted=License cannot be deleted, it is probably in use.
 item.type.deleted=Type has been successfully deleted.
 item.type.notdeleted=Type cannot be deleted, it is probably in use.
 level.key=ID
 level.level=Level
 level.translation=Translation
-license.id=ID
-license.key=License
+license.admin.title=Question pool
 lower.limit=Lower limit for positive decision
 lower.limit.desc=The decision method "Lower limit" changes the status of a question to "$org.olat.modules.qpool.ui\:lifecycle.status.finalVersion", if the minimum number of ratings is reached and if all ratings are equal or higher then the lower limit. If a rating is lower then the lower limit, the question status this immediately changed to "$org.olat.modules.qpool.ui\:lifecycle.status.revised", even if the minimum number of ratings is not reached yet.
 lower.limit.provider.name=Lower limit
@@ -52,7 +46,6 @@ pool.manager.edit.matadata=see all questions and edit the metadata
 pool.manager.edit.status=change the status of a question
 pool.manager.educational.context=edit the settings "$\:segment.educational.context"
 pool.manager.item.types=edit the settings "$\:segment.item.types"
-pool.manager.licenses=edit the settings "$\:segment.licenses"
 pool.manager.pools=edit the settings "$\:segment.pools"
 pool.manager.review.process=edit the settings "$\:segment.review.process"
 pool.manager.taxonomy=edit the settings "$\:segment.taxonomy"
@@ -66,7 +59,6 @@ segment.configuration=Question bank
 segment.educational.context=Levels
 segment.info.page=Infos page
 segment.item.types=Question types
-segment.licenses=Licenses
 segment.pools=Pools
 segment.review.process=Review process
 segment.taxonomy=Subjects
