--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
@@ -12,12 +12,9 @@ average.rating.for.final=Durchschnittliche Bewertung f\u00FCr Status "final"
 collections.enabled=Listen
 create.infos.page=Infoseite erstellen
 create.level=Stufe erstellen
-create.license=Lizenz erstellen
 create.type=Fragetyp erstellen
 delete.level=L\u00F6schen
 delete.level.confirm=Wollen Sie wirklich diese Stufe l\u00F6schen?
-delete.license=L\u00F6schen
-delete.license.confirm=Wollen Sie wirklich diese Lizenz l\u00F6schen?
 delete.qustions.without.author=Fragen l\u00F6schen, wenn Autor gel\u00F6scht
 delete.qustions.without.author.info=Beim L\u00F6schen eines Benutzers wird er als Autoren von allen Fragen ausgetragen. Wenn diese Option eingeschaltet ist und der Benutzer der einzige Autor einer Frage ist, wird die Frage ebenfalls gel\u00F6scht.
 delete.taxonomyLevel=L\u00F6schen
@@ -32,8 +29,6 @@ error.integer.positive=Die Eingabe muss eine positive Zahl sein.
 final.visibility=Sichtbarkeit von finalen Fragen
 final.visibility.manager=Verwalter
 final.visibility.manager.teacher=Verwalter, Dozent
-item.license.deleted=Lizenz wurde erfolgreich gel\u00F6scht
-item.license.notdeleted=Lizenz konnte nicht gel\u00F6scht werden, eventuell wird er bereits verwendet
 error.item.type.unique=Ein Fragetyp mit diesem Name existiert schon.
 item.type.deleted=Fragetyp wurde erfolgreich gel\u00F6scht
 item.type.notdeleted=Fragetyp konnte nicht gel\u00F6scht werden, eventuell wird er bereits verwendet
@@ -41,8 +36,7 @@ import.create.subject=Fachbereich beim Import erzeugen
 level.key=ID
 level.level=Stufe
 level.translation=\u00DCbersetzung
-license.id=ID
-license.key=Lizenz
+license.admin.title=Fragenpool
 lower.limit=Untergrenze f\u00FCr positive Beurteilung
 lower.limit.desc=Bei der Beurteilungsmethode "Untergrenze" wird eine Frage auf den Status "$org.olat.modules.qpool.ui\:lifecycle.status.finalVersion" gesetzt, wenn die minimale Anzahl der Bewertungen erreicht ist und alle Bewertungen h\u00F6her oder gleich hoch sind wie die Untergrenze. Wenn eine Bewertung unterhalb der Untergrenze liegt, dann wird der Status der Frage sofort auf "$org.olat.modules.qpool.ui\:lifecycle.status.revised" gesetzt, auch wenn die minimale Anzahl Bewertungen noch nicht erreicht ist.
 lower.limit.provider.name=Untergrenze
@@ -51,7 +45,6 @@ pool.manager.allowed=Der Poolverwalter darf
 pool.manager.edit.matadata=alle Fragen sehen und die Metadaten bearbeiten
 pool.manager.edit.status=den Status einer Frage beliebig \u00E4ndern
 pool.manager.educational.context=die Einstellungen "$:\segment.educational.context" bearbeiten
-pool.manager.licenses=die Einstellungen "$:\segment.licenses" bearbeiten
 pool.manager.item.types=die Einstellungen "$:\segment.item.types" bearbeiten
 pool.manager.pools=die Einstellungen "$:\segment.pools" bearbeiten
 pool.manager.review.process=die Einstellungen "$:\segment.review.process" bearbeiten
@@ -66,7 +59,6 @@ segment.configuration=Fragenpool
 segment.educational.context=Stufen
 segment.info.page=Infoseite
 segment.item.types=Fragetypen
-segment.licenses=Lizenzen
 segment.pools=Pool-Verwaltung
 segment.review.process=Beurteilungsprozess
 segment.taxonomy=Fachbereiche
