OO-3390: Option to disable subject (taxonomy) and level in question pool

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -53,7 +53,7 @@ delete.pool.confirm=Wollen Sie wirklich den Pool "{0}" l\u00F6schen?
 details=Detailansicht
 edit.pool=Pool editieren
 editable=Editierbar
-educational.context=Level
+educational.context=Stufe
 educational.learningTime=Durchschnittliche Bearbeitungszeit
 educational.learningTime.day=d
 educational.learningTime.hour=h
