--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
@@ -6,6 +6,7 @@ admin.pool.manager.title=Rights pool manager
 admin.pools.intro=Create one or more question pools. A pool is an question bank that allows all users with author rights the exchange of question items (public access). You can also opt for a pool with only a select few authors, e.g. a departments' staff (private access).
 admin.review.process.decision.type=Decision method
 admin.review.process.title=Review process
+admin.start.indexer=After enable or disable this option you should start the indexer of the full text search to ensure the right search results.
 admin.studyfields.intro=Subjects allow for technical indexing the question items. It's organized as a hierarchical structure for modelling the potential degree programs. Select the "$org.olat.modules.taxonomy.ui\:add.taxonomy.level" in order to create a new subject, or select an existing one for editing purposes.
 admin.types.intro=Create more question types if the existing default types aren't sufficient. Please note that the default question types can not be deleted.
 average.rating.for.final=Average rating for status "final"
@@ -24,6 +25,7 @@ delete.type.confirm=Do you really want to delete this type?
 edit.info.page=Edit infos page
 edit.taxonomyLevel=Edit subject
 educational.context.deleted=Subject has been successfully deleted.
+educational.context.enabled=Levels
 educational.context.notdeleted=Subject cannot be deleted, it is probably in use.
 error.integer.positive=The number must be positive.
 error.item.type.unique=A question type with this name already exists.
@@ -65,7 +67,9 @@ segment.taxonomy=Subjects
 selected.taxonomy.tree=Taxonomy
 shares.enabled=Groups
 taxonomy.all=All subjects
+taxonomy.can.not.be.deactivated=It is not possible to disable the subjects, if the review process is enabled.
 taxonomy.competences=Subjects with competence "teach" or "manage"
+taxonomy.enabled=Subjects
 taxonomy.selectable=Selectable subjects
 taxonomyLevel.deleted=Subject has been successfully deleted.
 taxonomyLevel.notdeleted=The subject cannot be deleted, it is probably in use.
