--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
@@ -6,6 +6,7 @@ admin.pool.manager.title=Rechte Poolverwalter
 admin.pools.intro=Erstellen Sie einen oder mehrere Fragenpools. Ein Fragenpool ist eine Fragendatenbank die allen Autoren des Systems f\u00FCr den Austausch von Fragen zur Verf\u00FCgung steht (\u00D6ffentlich). Optional l\u00E4sst sich ein Fragenpool auch auf einige wenige Autoren einschr\u00E4nken, z.B. die Mitarbeiter einer Abteilung (Nicht \u00F6ffentlich).
 admin.review.process.decision.type=Beurteilungsmethode
 admin.review.process.title=Beurteilungsprozess
+admin.start.indexer=Nach dem Ein- und Ausschalten dieser Option sollten Sie den Indexer der Volltextsuche starten, damit in der Suche die korrekten Resultate angezeigt werden.
 admin.studyfields.intro=Fachbereiche dienen der fachlichen Verschlagwortung der Fragen. Es handelt sich dabei um eine hierarchische Struktur die in der Regel die m\u00F6glichen Studieng\u00E4nge abbildet. W\u00E4hlen Sie die Schaltfl\u00E4che "$org.olat.modules.taxonomy.ui\:add.taxonomy.level" um einen neuen Fachbereich hinzuzuf\u00FCgen. W\u00E4hlen Sie einen bestehenden Fachbereich um diesen zu editieren.
 admin.types.intro=Erstellen Sie zus\u00E4tzliche Fragetypen, wenn die Standard Fragetypen von OpenOLAT nicht gen\u00FCgen. Die Standard Fragetypen k\u00F6nnen nicht gel\u00F6scht werden. 
 average.rating.for.final=Durchschnittliche Bewertung f\u00FCr Status "final"
@@ -24,6 +25,7 @@ delete.type.confirm=Wollen Sie wirklich diesen Typ l\u00F6schen?
 edit.info.page=Infoseite bearbeiten
 edit.taxonomyLevel=Fachbereich bearbeiten
 educational.context.deleted=Fachbereich wurde erfolgreich gel\u00F6scht
+educational.context.enabled=Stufen
 educational.context.notdeleted=Fachbereich konnte nicht gel\u00F6scht werden, eventuell wird er bereits verwendet
 error.integer.positive=Die Eingabe muss eine positive Zahl sein.
 final.visibility=Sichtbarkeit von finalen Fragen
@@ -65,7 +67,9 @@ segment.taxonomy=Fachbereiche
 selected.taxonomy.tree=Taxonomie
 shares.enabled=Gruppen
 taxonomy.all=Alle Fachbereiche
+taxonomy.can.not.be.deactivated=Die Fachbereiche k\u00F6nnen nicht ausgeschaltet werden, wenn der Beurteilungsprozess eingeschaltet ist.
 taxonomy.competences=Fachbereiche mit der Kompetenz "Dozieren" oder "Verwalten"
+taxonomy.enabled=Fachbereiche
 taxonomy.selectable=Ausw\u00E4lbare Fachbereiche
 taxonomyLevel.deleted=Fachbereich wurde erfolgreich gel\u00F6scht
 taxonomyLevel.notdeleted=Fachbereich konnte nicht gel\u00F6scht werden, eventuell wird er bereits verwendet.
