OO-3397: add audit log for author who change summary data of a participant

--- a/src/main/java/org/olat/modules/lecture/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/lecture/ui/_i18n/LocalStrings_en.properties
@@ -143,6 +143,12 @@ lectures.table.current=Current lecture block
 lectures.table.next=Next lecture blocks
 lectures.table.pending=Pending lecture blocks
 log=Log
+log.add.admission.date=Add admission date {0}
+log.add.rate=Add attendance rate {0}
+log.change.admission.date=Update admission date {0}
+log.change.rate=Update attendance rate {0}
+log.remove.admission.date=Remove admission date
+log.remove.rate=Remove attendance rate
 managed.flags.lecture.block.all=Fully externally managed
 managed.flags.lecture.block.compulsory=Compulsory
 managed.flags.lecture.block.dates=Dates
