--- a/src/main/java/org/olat/modules/lecture/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/lecture/ui/_i18n/LocalStrings_de.properties
@@ -143,6 +143,12 @@ lectures.table.current=Aktueller Lektionenblock
 lectures.table.next=N\u00E4chste Lektionenbl\u00F6cke
 lectures.table.pending=Pendente Lektionenbl\u00F6cke
 log=Log
+log.add.admission.date=Erstzulassungdatum hinzugef\u00FCgt: {0}
+log.add.rate=Schwellwert hinzugef\u00FCgt: {0}
+log.change.admission.date=Erstzulassungdatum angepasst: {0}
+log.change.rate=Schwellwert angepasst: {0}
+log.remove.admission.date=Erstzulassungdatum entfernt
+log.remove.rate=Schwellwert entfernt
 managed.flags.lecture.block.all=Vollst\u00E4ndige externe Verwaltung 
 managed.flags.lecture.block.compulsory=Zwingend
 managed.flags.lecture.block.dates=Datum
