no-jira: Wording

--- a/src/main/java/org/olat/course/nodes/edubase/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/edubase/_i18n/LocalStrings_de.properties
@@ -22,6 +22,7 @@ form.error.page.to.higher.from=Seite bis muss gr\u00F6sser sein als Seite von
 form.error.wrong.int=Falsches Zahlenformat. Beispiele\: 2, 10, 144
 form.error.wrong.section.id=Ung\u00FCltiger Wert
 link.text=Edubase
+open.document=Dokument \u00F6ffnen
 pane.tab.accessibility=Zugang
 pane.tab.book.section.list=Buchpassagen
 pane.tab.config=Konfiguration
