--- a/src/main/java/org/olat/course/nodes/edubase/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/edubase/_i18n/LocalStrings_en.properties
@@ -22,6 +22,7 @@ form.error.page.to.higher.from=Page to has to be higher than page from
 form.error.wrong.int=Wrong numeral format. Examples\: 2, 10, 144
 form.error.wrong.section.id=Invalid value
 link.text=Edubase
+open.document=Open document
 pane.tab.accessibility=Access
 pane.tab.book.section.list=Book sections
 pane.tab.config=Configuration
