no-jira: Wording

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -21,11 +21,11 @@ confirm.copy.message=Wollen Sie diese Fragen wirklich kopieren?
 confirm.copy.questions=Fragen
 confirm.copy.title=Kopieren
 confirm.delete.button=L\u00F6schen
-confirm.delete.confirmation=Alle ausgew\u00E4tlten Fragen l\u00F6schen
+confirm.delete.confirmation=Alle ausgew\u00E4hlten Fragen l\u00F6schen
 confirm.delete.confirmation.error=Bitte best\u00E4tigen.
 confirm.delete.questions=Fragen
 confirm.delete.title=L\u00F6schen
-confirm.delete.message=Wollen Sie die ausgew\u00E4tlten Fragen wirklich l\u00F6schen? Sie k\u00F6nnen nicht wiederhergestellt werden.
+confirm.delete.message=Wollen Sie die ausgew\u00E4hlten Fragen wirklich l\u00F6schen? Sie k\u00F6nnen nicht wiederhergestellt werden.
 confirm.delete.source=Wollen Sie wirklich diese Liste l\u00F6schen?
 confirm.unshare=Wollen Sie wirklich diese Frage von "{0}" entfernen?
 convert.editable=Andere Benutzer d\u00FCrfen die Frage bearbeiten
