OO-3339: add keywords from metadata along with the title

--- a/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_de.properties
@@ -29,6 +29,7 @@ table.header.answered=Beantwortet
 table.header.notAnswered=Nicht beantwortet
 table.header.user=Teilnehmer
 table.header.username=Benutzername
+table.header.item.keywords=Schlagw\u00F6rter
 table.header.item.title=Frage
 table.header.item.type=Fragetyp
 table.header.autoCorrected=Auto
