--- a/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_en.properties
@@ -28,6 +28,7 @@ table.header.action=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
 table.header.answered=Answered
 table.header.autoCorrected=Auto
 table.header.corrected=Manual
+table.header.item.keywords=Keywords
 table.header.item.title=Question
 table.header.item.type=Question type
 table.header.not.corrected=Not corrected
