OO-3404: allow to copy alien assessment item, show an error if the user try to copy an unreadable assessment item

--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_en.properties
@@ -25,6 +25,7 @@ delete.section=$org.olat.ims.qti.editor\:delete.section
 delete.testPart=Do you really want to delete the test part along with all its questions?
 editor.sc.title=Single choice
 editor.unkown.title=Unkown interaction
+error.assessment.item=$\:error.assessment.test
 error.assessment.test=The file cannot be interpreted. It seems corrupted or with the wrong format.
 error.cannot.create.section=A section cannot be created everywhere\!
 error.cannot.delete=You cannot delete this object.
