--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_de.properties
@@ -27,6 +27,7 @@ delete.section=$org.olat.ims.qti.editor\:delete.section
 delete.testPart=Wollen Sie den Test-Part mit allen Fragen wirklich l\u00F6schen?
 editor.sc.title=Single choice
 editor.unkown.title=Unbekanntes interaction
+error.assessment.item=$\:error.assessment.test
 error.assessment.test=Die Datei konnte nicht gelesen werden. Sie ist entweder korrupt oder mit dem falschen Format gespeichert.
 error.cannot.create.section=Sie k\u00F6nnen hier keine Sektion erstellen.
 error.cannot.delete=Sie d\u00FCrfen diese Ressource nicht l\u00F6schen.
