--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_de.properties
@@ -19,7 +19,7 @@ archive.table.header.points=$\:table.header.score
 archive.table.header.section=Sektion "{0}"
 archive.table.header.test=Test
 assessment.comment.legend=Pers\u00F6nliche Notizen
-assessment.comment.legend.help=Sie k\u00F6nnen ein Kommentar hier schreiebn. Diese Notizen sind privat und werden nicht in einem Pr\u00FCfung ber\u00FCcksichtigt.
+assessment.comment.legend.help=Nutzen Sie die Textbox f\u00FCr pers\u00F6nliche Notizen und Kommentare. Diese Notizen sind nur f\u00FCr Sie sichtbar und werden nicht in der Pr\u00FCfung ber\u00FCcksichtigt.
 assessment.item.mark=F\u00FCgen Sie eine private Markierung hinzu als Erinnerung um diese Frage sp\u00E4ter noch einmal anzuschauen
 assessment.item.point={0} Punkt
 assessment.item.points={0} Punkte
