--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_en.properties
@@ -19,7 +19,7 @@ archive.table.header.points=$\:table.header.score
 archive.table.header.section=Section "{0}"
 archive.table.header.test=Test
 assessment.comment.legend=Personal notes
-assessment.comment.legend.help=Please use the following text box if you need to provide any additional information, comments or feedback during this test. This notice is private and will be taken in account for an exam.
+assessment.comment.legend.help=Please use the following text box for any personal notes during this test. These notes are only visible to you and will not be taken in account for the exam.
 assessment.item.mark=Add personal marking as a reminder to review this question
 assessment.item.point={0} point
 assessment.item.points={0} points
