--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_fr.properties
@@ -19,7 +19,7 @@ archive.table.header.points=$\:table.header.score
 archive.table.header.section=Sektion "{0}"
 archive.table.header.test=Test
 assessment.comment.legend=Notes personelles
-assessment.comment.legend.help=Vous pouvez ajoutez un commentaire dans le champ de texte ci-dessous. Cette note est priv\u00E9e et il n'en sera pas tenu compte dans un test.
+assessment.comment.legend.help=Utilisez s'il-vous pla\u00EEt le champ de texte ci-dessous pour vos notes personelles. Vous \u00EAtes seuls \u00E0 voir ces notes et il n'en sera pas tenu compte pour un examen.
 assessment.item.mark=Ajouter un signet pour revoir cette question plus tard
 assessment.item.status.answered=R\u00E9pondu
 assessment.item.status.finished=Termin\u00E9
