--- a/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_fr.properties
@@ -5,6 +5,7 @@ comment.test=Commentaire du test
 correction=Corriger
 correction.min.max.score=Le r\u00E9sultat doit \u00EAtre entre {0} et {1}.
 correction.test.title=Corriger
+error.double.format=Format erron\u00E9. Exemples\: 15.0, 5.5, 10 ou 3,2
 error.in.form=Les changements n'ont pas pu \u00EAtre sauv\u00E9 car ils y a encore des erreurs pour une ou plusieurs questions. Le d\u00E9tail des erreurs se trouvent aupr\u00E8s de la question correspondante.
 grade.no.items=Il n'y a pas de r\u00E9sultats \u00E0 corriger pour cette question.
 next.item=Question suivante
