no-jira: french translation

--- a/src/main/java/org/olat/modules/forms/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/modules/forms/ui/_i18n/LocalStrings_fr.properties
@@ -1,13 +1,24 @@
-#Wed Jan 11 18:35:47 CET 2017
+#Mon Apr 16 21:09:14 CEST 2018
+add.formfileupload=T\u00E9l\u00E9charger fichier
 add.formhr=S\u00E9parateur
 add.formhtitle=Titre
 add.formrubric=Rubrique
 add.slider=Ajouter un curseur
 confirm.done=Voulez-vous soumettre votre \u00E9valuation? Une fois soumise, vous ne pouvez plus l'\u00E9diter.
 end.label=Fin
+error.cannot.save.file=Le fichier n'a pas pu \u00EAtre sauv\u00E9.
 evaluation.form.in.use=La ressource est d\u00E9j\u00E0 utilis\u00E9e pour \u00E9valuation. L'\u00E9dition en est limit\u00E9.
 evaluation.in.progress=L'\u00E9valuation est en cours.
 evaluator=Utilisateur {0}
+file.upload.error.limit.exeeded=Le fichier est trop volumineux.
+file.upload.error.mime.type.wrong=Ce type de fichier n'est pas autoris\u00E9.
+file.upload.limit=Taille de fichier maximale
+file.upload.mime.type.all=Tous
+file.upload.mime.type.audio=Audio
+file.upload.mime.type.image=Images
+file.upload.mime.type.pdf=PDF
+file.upload.mime.type.video=Filmes
+file.upload.mime.types=Type de fichier
 h1=h1
 h2=h2
 h3=h3
