OO-3417: implements a password policy with max. age

--- a/src/main/java/org/olat/login/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/login/_i18n/LocalStrings_de.properties
@@ -40,6 +40,22 @@ accesskey.top=$org.olat.core.commons.fullWebApp\:accesskey.top
 accesskey.topnav=$org.olat.core.commons.fullWebApp\:accesskey.topnav
 admin.menu.title=Gast und Einladung
 admin.menu.title.alt=$\:admin.menu.title
+
+admin.password.menu.title=Kennwortrichtlinie
+admin.password.menu.title.alt=Kennwortrichtlinie
+change.once=Passwort must einmal ge\u00E4ndert werden
+max.age=Standard Lebensdauer
+max.age.hint=In Tage
+max.age.title=Max. Lebensdauer von Kennwörter
+max.age.description=Sie können hier den maximum Lebensdauer von Kennwörter für jede Rolle definieren.
+max.age.author=Lebensdauer für Autor
+max.age.groupmanager=Lebensdauer für Gruppenverwalter
+max.age.poolmanager=Lebensdauer für  Fragenpoolverwalter
+max.age.usermanager=Lebensdauer für Benutzerverwalter
+max.age.learnresourcemanager=Lebensdauer für  Lernressourcenverwalter
+max.age.administrator=Lebensdauer für Systemadministrator
+password.policy.title=Kennwortrichtlinie
+
 authentication.provider.description=Geh\u00F6ren Sie keiner der oben aufgelisteten Institutionen an oder haben ein lokales Nutzerkonto?
 authentication.provider.linkText=Anmelden mit OpenOLAT Konto 
 browsercheck.bestresults.newerversion=oder neuere Version
