--- a/src/main/java/org/olat/login/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/login/_i18n/LocalStrings_en.properties
@@ -40,6 +40,22 @@ accesskey.top=$org.olat.core.commons.fullWebApp\:accesskey.top
 accesskey.topnav=$org.olat.core.commons.fullWebApp\:accesskey.topnav
 admin.menu.title=Guest and invitation
 admin.menu.title.alt=$\:admin.menu.title
+
+admin.password.menu.title=Password policy
+admin.password.menu.title.alt=Password policy
+change.once=Password need to be changed once
+max.age=Default age
+max.age.hint=In days
+max.age.title=Maximum age policy for passwords
+max.age.description=You can define the maximum age for password by roles.
+max.age.author=Max. age for author
+max.age.groupmanager=Max. age for group manager
+max.age.poolmanager=Max. age for question bank manager
+max.age.usermanager=Max. age for user manager
+max.age.learnresourcemanager=Max. age for learning resource manager
+max.age.administrator=Max. age administrator
+password.policy.title=Password policies
+
 authentication.provider.description=Don't you belong to one of the institutions mentioned above or have a local user acount?
 authentication.provider.linkText=Login with OpenOLAT account
 browsercheck.bestresults.newerversion=or later version
