--- a/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_de.properties
@@ -24,7 +24,7 @@ coach.back.to.submission.confirm.text=Sind Sie sicher dass Sie die Abgabe f\u00F
 coach.back.to.submission.confirm.title=Abgabe erneut \u00F6ffnen
 coach.back.to.submission.desc=Hat der Teilnehmer versehentlich die endg\u00FCltige Abgabe ausgel\u00F6st, so kann mit dieser Aktion der Status auf "nicht abgegeben" zur\u00FCckgesetzt werden.
 coach.close.revision.button=Revision akzeptieren
-coach.collect.confirm.desc=Sie k\u00F6nnen Dokumente des Teilnehmers aktiv einziehen f\u00FCr den Fall, dass ein Teilnehmner vergessen hat die endg\u00FCltige Abgabe durchzuf\u00FCren.
+coach.collect.confirm.desc=Sie k\u00F6nnen Dokumente des Teilnehmers aktiv einziehen f\u00FCr den Fall, dass ein Teilnehmner vergessen hat die endg\u00FCltige Abgabe durchzuf\u00FChren.
 coach.collect.confirm.text=Sie sind gerade dabei den Abgabeprozess f\u00FCr "{0}" zu beenden. Bitte klicken Sie nur dann auf "OK", wenn Sie sicher sind dass bereits alle ben\u00F6tigten Dokumente abgegeben wurden.
 coach.collect.confirm.title=Dokument(e) einziehen
 coach.collect.revisions=$\:coach.collect.task
